# attractor

./: README.md  pyproject.toml
docs/: concepts.md  cookbook.md  reference.md  tutorial.md  user-guide.md
docs/examples/: ch02-first-pipeline.dot  ch03-adding-work.dot  ch04-branching.dot  ch05-human-review.dot  ch06-loops.dot  ch07-quality-gates.dot  ch08-parallel.dot  ch09-tool-nodes.dot  ch10-stylesheet.dot  ch14-prd-to-product.dot  ch15-complete-pipeline.dot
docs/plans/: 2026-02-22-attractor-implementation-design.md  2026-02-23-documentation-implementation.md  2026-02-23-documentation-redesign-design.md
tests/test_agent/: test_detection.py  test_environments.py  test_events.py  test_patch.py  test_profiles.py  test_prompt.py  test_registry.py  test_session.py  test_subagent.py  test_tools_core.py  test_truncation.py
tests/test_engine/: test_artifacts.py  test_checkpoint.py  test_cli.py  test_conditions.py  test_context.py  test_engine.py  test_fidelity.py  test_graph.py  test_interviewer.py  test_outcome.py  test_parser.py  test_server.py  test_stylesheet.py  test_transforms.py  test_validator.py
tests/test_engine/test_handlers/: test_base.py  test_codergen.py  test_human.py  test_manager.py  test_parallel.py  test_tool.py
tests/test_integration/: test_e2e.py
tests/test_integration/fixtures/: branching.dot  human_review.dot  simple.dot
tests/test_llm/: test_catalog.py  test_client.py  test_errors.py  test_generate.py  test_middleware.py  test_retry.py  test_stream.py  test_types.py
tests/test_llm/test_providers/: test_anthropic.py  test_gemini.py  (+2 more)
